--- a/style.css
+++ b/style.css
@@ -1,3 +1,47 @@
+* { 
+    margin: 0; 
+    padding: 0; 
+} 
+  
+body { 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    min-height: 100vh; 
+    background: #ffffff; 
+    flex-direction: column; 
+} 
+
+.mainContainer { 
+    background-color: #fff; 
+    border-radius: 15px; 
+    box-shadow: 0 0 20px
+        rgba(0, 0, 0, 0.2); 
+    padding: 20px; 
+    transition: transform 0.2s; 
+    width: 600px; 
+} 
+  
+.mainContainer:hover { 
+    transform: scale(1.05); 
+} 
+
+/* .rangeContaier { 
+    position: relative; 
+}  */
+  
+/* .rangeContaier input { 
+    position: absolute; 
+    width: 100%; 
+    height: 5px; 
+    background: none; 
+    top: -5px; 
+    pointer-events: none; 
+    cursor: pointer; 
+    -webkit-appearance: none; 
+} 
+   */
+
 /* Mouse-over effects */
 .slider:hover {
     opacity: 1; /* Fully shown on mouse-over */
@@ -16,7 +60,7 @@
     transition: opacity .2s;
 }
 
-/* .slider::-webkit-slider-thumb {
+.slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     width: 25px;
@@ -24,4 +68,4 @@
     border-radius: 0%; 
     background: #04AA6D;
     cursor: pointer;
-} */
+}
